<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/background"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageButton
                android:id="@+id/notifications_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/ic_notifications"
                android:tooltipText="@string/title_notifications"
                app:tint="@color/foreground" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="8dp"
                android:src="@drawable/ic_thinker"
                app:tint="@color/foreground" />

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/ic_search"
                android:tooltipText="@string/title_search"
                app:tint="@color/foreground" />


        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:alpha="0.9"
                android:fontFamily="@font/kanit_extrabold"
                android:text="@string/flash_cards"
                android:textAllCaps="true"
                android:textColor="@color/foreground_translucent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_card_packs" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>