<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/background"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/kanit_bold"
                android:lines="1"
                android:text="@string/iamyajat"
                android:textSize="18sp" />


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                android:padding="2dp"
                android:src="@drawable/ic_settings"
                app:tint="@color/foreground" />


        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:adjustViewBounds="true"
                android:elevation="14dp"
                android:scaleType="centerCrop"
                android:src="@drawable/iamyajat"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/kanit_bold"
                android:lines="1"
                android:paddingHorizontal="16dp"
                android:text="@string/yajat_malhotra"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.9"
                android:ellipsize="end"
                android:fontFamily="@font/kanit_light"
                android:lineSpacingExtra="-4dp"
                android:maxLines="3"
                android:textAlignment="center"
                android:textColor="@color/foreground_translucent"
                tools:text="@tools:sample/lorem/random" />

            <Button
                android:id="@+id/edit_profile_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/kanit"
                android:letterSpacing="0"
                android:text="@string/edit_profile"
                android:textColor="@color/foreground"
                app:strokeColor="@color/foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:alpha="0.9"
                android:fontFamily="@font/kanit_extrabold"
                android:text="@string/cards"
                android:textAllCaps="true"
                android:textColor="@color/foreground_translucent" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="-4dp"
                app:cardCornerRadius="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/posts_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_card_image" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>